--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+bin/
+test_output/
+
 # Created by https://www.toptal.com/developers/gitignore/api/go
 # Edit at https://www.toptal.com/developers/gitignore?templates=go
 
