--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ bin/
 output/
 test_output/
 
+coverage.html
+
 # Created by https://www.toptal.com/developers/gitignore/api/go
 # Edit at https://www.toptal.com/developers/gitignore?templates=go
 
