Implement comprehensive config system for all export formats with event-driven architecture
- Add configuration classes for HTML, LaTeX, and EPUB formats with extensive customization options
- Update all writers to use their respective configurations for flexible output formatting
- Fix critical event stream ordering bug where text was emitted before formatting events
- Remove unused functions and clean up import dependencies
- All tests passing with proper formatting applied across all formats
- Enhanced MultiExporter to manage configurations for all four formats with sensible defaults

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ go.work
 # End of https://www.toptal.com/developers/gitignore/api/go
 
 setup-plan.md
+cli_example.go_cli.sample
+test_output.md/Station B3 Deel 2.md
+.gitignore
