Removed source summary json files for copyright/security reasons

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ package.json
 package-lock.json
 node_modules/
 
+source/
+source.bak/
+
 # Created by https://www.toptal.com/developers/gitignore/api/go
 # Edit at https://www.toptal.com/developers/gitignore?templates=go
 
