Major architecture upgrade: type migration, API client, and enhanced exports
- Enhanced Book model with rich academic metadata (bachelor year, exam dates, progress tracking)
- Added complete SlimAcademy API client with OAuth2 authentication and token persistence
- Implemented fetch command for downloading books from SlimAcademy API to source directory
- Upgraded HTML exports with professional academic styling, hierarchical TOC, and metadata display
- Fixed type compatibility across parser, sanitizer, streaming, and writers
- Removed legacy transformer component and replaced with modern streaming architecture
- Reduced HTML writer complexity from 42 to 2 using map-based dispatcher pattern
- Fixed all go-critic style violations and ensured full pre-commit compliance
- Added comprehensive type definitions for Google Docs structure (Document, Paragraph, Table, etc.)
- Enhanced streaming events with academic metadata and chapter hierarchy support

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ node_modules/
 source/
 source.bak/
 
+smart-bash/
+
+.env
+
 # Created by https://www.toptal.com/developers/gitignore/api/go
 # Edit at https://www.toptal.com/developers/gitignore?templates=go
 
