--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,10 @@ go.work
 
 # End of https://www.toptal.com/developers/gitignore/api/go
 
+# Project specific
 setup-plan.md
-cli_example.go_cli.sample
-test_output.md/Station B3 Deel 2.md
-.gitignore
+.backup/
+
+# Legacy files
 transformer
+cli_example.go_cli.sample
