chore: Comprehensive project cleanup and reorganization
- Remove 14MB binary artifact (bin/slim)
- Clean 54MB local cache (outputs/)
- Remove 12MB legacy backup (.backup/)
- Reorganize documentation into docs/ structure
- Move demo code to examples/ directory
- Create .env.example for safe credential sharing
- Fix filename typo: reccomendations.md → recommendations.md
- Update .gitignore with better patterns
- Fix go-critic defer/exit issue in examples/analyze_core_keys.go

Total cleanup: ~80MB of artifacts removed
Security: Prevent credential exposure with .env.example pattern

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 bin/*
+!bin/.gitkeep
 output/*
 outputs/
 test_output/
 /slim
+
+# Generated output files
+*.html
+*.md.bak
+*_output.*
 
 coverage.html
 
