--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
     types: [ published ]
 
 env:
-  GO_VERSION: "1.23"
+  GO_VERSION: "1.24.4"
   GOLANGCI_LINT_VERSION: "v1.57.2"
 
 jobs:
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ["1.22", "1.23"]
+        go-version: ["1.24.4"]
 
     steps:
     - name: Checkout code
@@ -115,7 +115,7 @@ jobs:
         go-version: ${{ env.GO_VERSION }}
 
     - name: Run Gosec Security Scanner
-      uses: securecodewarrior/github-action-gosec@master
+      uses: securego/gosec@master
       with:
         args: '-fmt sarif -out gosec-results.sarif ./...'
 
